# Vent-Engine-OLD

./: .gitignore  .gitmodules  CMakeLists.txt  License.txt  README.md
Editor/src/: Vent-Editor.cpp  Vent-Editor.hpp
Editor/src/gui/: Vent_GUI.cpp  Vent_GUI.hpp
Runtime/: CMakeLists.txt
Runtime/src/: Vent-Runtime.cpp  Vent_Window.cpp  Vent_Window.hpp
Runtime/src/audio/: Audio_Base.hpp
Runtime/src/objects/: Camera.cpp  Camera.hpp  GameObject.hpp
Runtime/src/render/: ObjectRenderer.cpp  Renderer.hpp  VKRenderer.cpp
Runtime/src/vk/: Vulkan_Base.cpp  Vulkan_Base.hpp  Vulkan_Pipeline.cpp  Vulkan_RenderPass.cpp
Runtime/src/vk/buffer/: VulkanVertexBuffer.cpp
Runtime/src/vk/image/: Vulkan_Image.cpp  Vulkan_Image.hpp
Runtime/src/vk/mesh/: Vulkan_Mesh.cpp  Vulkan_Mesh.hpp
Runtime/src/vk/mesh/format/: MeshFormatLoader.hpp
Runtime/src/vk/uniform/: Vulkan_3D_Unifrom.cpp  Vulkan_3D_Unifrom.hpp
assets/shaders/: color.frag  color.vert  model.frag  model.vert  texture.vert
src/: Vent-Engine.cpp  Vent-Engine.hpp  Vent-Runtime.cpp  Vent-Runtime.hpp  Vent_Window.cpp  Vent_Window.hpp
src/audio/: Audio_Base.cpp
src/objects/: Camera.cpp  Camera.hpp  GameObject.hpp
src/render/: ObjectRenderer.hpp  Renderer.hpp  VKRenderer.cpp
src/vk/: Vulkan_Base.cpp  Vulkan_Base.hpp  Vulkan_Mesh.cpp  Vulkan_Mesh.hpp  Vulkan_Model.cpp  Vulkan_Model.hpp  Vulkan_Pipeline.cpp  Vulkan_RenderPass.cpp  Vulkan_Swapchain.cpp
src/vk/buffer/: VulkanVertexBuffer.cpp  VulkanVertexBuffer.hpp
src/vk/format/: MeshFormatLoader.hpp
src/vk/image/: Vulkan_Image.cpp  Vulkan_Image.hpp
src/vk/mesh/: Vulkan_Mesh.cpp  Vulkan_Mesh.hpp
src/vk/mesh/format/: MeshFormatLoader.hpp  OBJMeshFormatLoader.hpp
src/vk/uniform/: Vulkan_3D_Unifrom.cpp  Vulkan_3D_Unifrom.hpp
